--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prepare": "husky install",
     "lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --fix",
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|)\""
   },
@@ -17,7 +18,8 @@
     "clsx": "^1.1.1",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-swipeable-views": "^0.13.9"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
