--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "clsx": "^1.1.1",
     "next": "10.2.0",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-swipeable-views": "^0.13.9"
