--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
