--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-swipeable-views": "^0.13.9",
+    "react-text-mask": "^5.4.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
