--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@reduxjs/toolkit": "^1.5.1",
     "clsx": "^1.1.1",
-    "next": "10.2.0",
-    "next-images": "^1.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.1.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-swipeable-views": "^0.13.9",
     "react-text-mask": "^5.4.3",
     "yup": "^0.32.9"
