--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.4",
     "clsx": "^1.1.1",
     "next": "10.2.0",
     "next-images": "^1.8.1",
