--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
+    "mui-image": "^1.0.4",
     "next": "^11.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
