add more carousel images

--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,6 @@ CooleyNext:
   inputs:
     bucketName: 'cooley-assets'
     bucketRegion: 'us-east-2'
-    # domain: 'cleaningwithcooley.com'
+    domain: ['dev', 'cleaningwithcooley.com']
     # cloudfront:
     #   distributionId: 'E31LUZRV95T20P'
